unpackaged/main/default/objects/Account/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>This is the External Id that links to the historic Account: Contractor Upload data</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>