unpackaged/main/default/objects/Account/fields/Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>Services_Provided__c</fullName>
    <description>Please give brief description of the services this vendor provides</description>
    <label>Services Provided</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>