unpackaged/main/default/objects/Account/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check Box if this is a Vendor</description>
    <inlineHelpText>Check Box if this is a Vendor</inlineHelpText>
    <label>Vendor</label>
    <type>Checkbox</type>
</CustomField>