unpackaged/main/default/objects/Account/listViews/Maintenance_Vendors.listView-meta.xml
<ListView>
    <fullName>Maintenance_Vendors</fullName>
    <columns>Vendor__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vendor__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Maintenance Vendors</label>
</ListView>