unpackaged/main/default/objects/Account/listViews/Vendor_Portal_Vendors.listView-meta.xml
<ListView>
    <fullName>Vendor_Portal_Vendors</fullName>
    <columns>Vendor__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vendor__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Vendor Portal Vendors</label>
</ListView>